<resources>
    <string name="app_name">cremeBrulee</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_email">Email Please</string>
    <string name="signup_password">Password Please</string>
    <string name="confirm_password">Verify Password</string>
    <string name="create_account">Sign Up!</string>
    <string name="join_now">Join now</string>
    <string name="signIn_here">Have an account? Sign in Here</string>
    <string name="register">Register</string>
    <string name="title_activity_tabs">tabs</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>

    <string name="section_format">Hello World from section: </string>


    <!--profile page -->
    <string name="profile">Profile</string>
    <string name="interests">Interests</string>
    <string name="opinions">Opinions</string>
    <string name="activities">Activities</string>
    <string name="profile_description">Edit Your Profile</string>
    <string name="interest_description">What do you like?</string>
    <string name="opinion_description">What are your opinions on..</string>
    <string name="activity_description">What do you like to do?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_pick_interest">PickInterest</string>

    <!--image page -->
    <string name="image_title_1">What do you think about this?</string>
    <string name="image_title_2">Do you like this?</string>
    <string name="image_title_3">Puppys are cute</string>
    <string name="image_title_4">Puppys are cute</string>
    <string name="image_title_5">Puppys are cute</string>
    <string name="image_title_6">Puppys are cute</string>
    <string name="image_title_7">Puppys are cute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
