<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="plscuddleme.yuhanlee.cremebrulee.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ImageView
            android:id="@+id/sign_in_image"
            android:layout_width="450dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sign_up" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/signup_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_sign_up_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/sign_in_here"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signIn_here" />

    </LinearLayout>
</RelativeLayout>