<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:paddingTop="10dp"
    tools:context="plscuddleme.yuhanlee.cremebrulee.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <ImageView
            android:id="@+id/signInPic"
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sign_in" />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lets_go" />

        <TextView
            android:id="@+id/join_now"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/join_now" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tabs" />


    </LinearLayout>
</RelativeLayout>