<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/light_blue"
    tools:context="plscuddleme.yuhanlee.cremebrulee.SignInActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/global_margin_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="30dp"
            android:text="Welcome!" />

        <ImageView
            android:id="@+id/sign_in_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/dog2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lets_go" />

            <TextView
                android:id="@+id/join_now"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/join_now" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>